# solanaceae_ngc_ft1

./: CMakeLists.txt
plugins/: CMakeLists.txt  plugin_ngcft1.cpp  plugin_ngchs2.cpp
solanaceae/ngc_ext/: ngcext.cpp  ngcext.hpp
solanaceae/ngc_ft1/: cca.hpp  cubic.cpp  cubic.hpp  flow_only.cpp  flow_only.hpp  ledbat.cpp  ledbat.hpp  ngcft1.cpp  ngcft1.hpp  ngcft1_file_kind.hpp  rcv_buf.cpp  rcv_buf.hpp  snd_buf.cpp  snd_buf.hpp  staged_ema.hpp  ui.cpp  ui.hpp
solanaceae/ngc_ft1_sha1/: bitset.hpp  bitset_tests.cpp  chunk_picker.cpp  chunk_picker.hpp  chunk_picker_systems.cpp  chunk_picker_systems.hpp  components.cpp  components.hpp  contact_components.hpp  contact_components_to_string.cpp  contact_components_to_string.hpp  file2_mapped.hpp  file_constructor.cpp  file_constructor.hpp  file_inactivity_system.cpp  file_inactivity_system.hpp  file_rw_mapped.hpp  ft1_sha1_info.cpp  ft1_sha1_info.hpp  participation.cpp  participation.hpp  re_announce_systems.cpp  re_announce_systems.hpp  receiving_transfers.cpp  receiving_transfers.hpp  sending_transfers.cpp  sending_transfers.hpp  sha1_ngcft1.cpp  sha1_ngcft1.hpp  transfer_stats_systems.cpp  transfer_stats_systems.hpp  util.hpp
solanaceae/ngc_ft1_sha1/backends/: sha1_mapped_filesystem.cpp  sha1_mapped_filesystem.hpp
solanaceae/ngc_hs2/: ngc_hs2.cpp  ngc_hs2.hpp  ngc_hs2_recv.cpp  ngc_hs2_recv.hpp  ngc_hs2_rizzler.cpp  ngc_hs2_rizzler.hpp  ngc_hs2_send.cpp  ngc_hs2_send.hpp  ngc_hs2_sigma.cpp  ngc_hs2_sigma.hpp  serl.hpp  spec_ngc_hs2.md  test_ts_binarysearch.cpp  ts_find_start.hpp
